git commitの説明をindex.htmlに追加

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     gitレクチャー
   </title>
   <body>
+    <h1>git commitとは</h1>
+    <a>git commitとはステージングに乗った変更をまとまりとして履歴を残すもの</a>
     <script type="text/javascript" src="./app.js"></script>
   </body>
 </html>
